fix: Add content spacing

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -5,6 +5,7 @@
     margin-top: 32px;
   }
 
+  justify-content: space-between;
   display: flex;
   position: relative;
   margin-top: 20px;
